Ensure the correct python version is installed
The pyenv role is supposed to do this, but it doesnt seem to be working

--- a/ansible/roles/python/tasks/main.yml
+++ b/ansible/roles/python/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 - block:
+  - name: Ensure the correct python version is installed
+    command: "{{ install_folder }}/pyenv/bin/pyenv install {{ python_version }}"
+
   - name: Ensure pyenv has the correct python version
     command: "{{ install_folder }}/pyenv/bin/pyenv global {{ python_version }}"
 
