--- a/ansible/roles/celery_worker/tasks/main.yml
+++ b/ansible/roles/celery_worker/tasks/main.yml
@@ -6,8 +6,16 @@
       dest: "{{ install_folder }}/colosseum_website"
       version: "{{ deploy_branch }}"
 
+  - name: Ensure pip is available
+    command: "{{ install_folder }}/pyenv/shims/python3 -m ensurepip"
+
+  - name: Ensure poetry is available
+    command: "{{ install_folder }}/pyenv/shims/python3 -m pip install poetry"
+    args:
+      chdir: "{{ install_folder }}/colosseum_website"
+
   - name: Install project deps with Poetry
-    shell: "{{ install_folder }}/pyenv/shims/python3 -m poetry install"
+    command: "{{ install_folder }}/pyenv/shims/python3 -m poetry install"
     args:
       chdir: "{{ install_folder }}/colosseum_website"
 
