--- a/ansible/roles/python/tasks/main.yml
+++ b/ansible/roles/python/tasks/main.yml
@@ -1,10 +1,13 @@
 ---
 - block:
-  - name: Ensure the correct python version is installed
-    command: "{{ install_folder }}/pyenv/bin/pyenv install {{ python_version }}"
-
   - name: Ensure pyenv has the correct python version
     command: "{{ install_folder }}/pyenv/bin/pyenv global {{ python_version }}"
+
+  - name: Check for python version
+    command: "{{ install_folder }}/pyenv/bin/pyenv versions"
+    register: pyenv_out
+
+  - debug: var=pyenv_out.stdout_lines
 
   - name: Ensure pip is available
     command: "{{ install_folder }}/pyenv/shims/python3 -m ensurepip"
