Always run two colosseum workers

--- a/ansible/roles/colosseum_worker/tasks/main.yml
+++ b/ansible/roles/colosseum_worker/tasks/main.yml
@@ -34,6 +34,7 @@
   - name: Start worker
     shell: |
       while [[ true ]]; do {{ install_folder }}/pyenv/shims/python3 -m poetry run python3 tournament_online.py; done &
+      while [[ true ]]; do {{ install_folder }}/pyenv/shims/python3 -m poetry run python3 tournament_online.py; done &
     args:
       executable: /bin/bash
       chdir: "{{ install_folder }}/colosseum"
