Improve wal settings

--- a/ansible/roles/postgres/templates/postgresql.conf
+++ b/ansible/roles/postgres/templates/postgresql.conf
@@ -17,7 +17,8 @@ dynamic_shared_memory_type = posix
 
 #temp_file_limit = -1  # TODO
 
-wal_level = {{ postgres_wal_level | default('replica') }}
+wal_level = {{ postgres_wal_level | default('minimal') }}
+max_wal_senders = {{ postgres_max_wal_senders | default('0') }}
 fsync = on
 max_wal_size = 1GB
 min_wal_size = 32MB
