Disable wal archival

--- a/ansible/roles/postgres/files/postgresql.conf
+++ b/ansible/roles/postgres/files/postgresql.conf
@@ -19,10 +19,9 @@ dynamic_shared_memory_type = posix
 
 wal_level = replica
 fsync = on
-wal_segment_size = 16MB
 max_wal_size = 1GB
 min_wal_size = 32MB
-archive_mode = on
+archive_mode = off
 archive_timeout = 60  # Every 60 seconds might be too aggressive
 
 archive_command = 'test ! -f /var/lib/postgresql/12/main/pg_wal_bkp/%f && cp %p /var/lib/postgresql/12/main/pg_wal_bkp/%f'
