--- a/ansible/roles/postgres/templates/postgresql.conf
+++ b/ansible/roles/postgres/templates/postgresql.conf
@@ -17,11 +17,11 @@ dynamic_shared_memory_type = posix
 
 #temp_file_limit = -1  # TODO
 
-wal_level = replica
+wal_level = {{ postgres_wal_level | default('replica') }}
 fsync = on
 max_wal_size = 1GB
 min_wal_size = 32MB
-archive_mode = off
+archive_mode = {{ postgres_archive_mode | default('off') }}
 archive_timeout = 60  # Every 60 seconds might be too aggressive
 
 archive_command = 'test ! -f /var/lib/postgresql/12/main/pg_wal_bkp/%f && cp %p /var/lib/postgresql/12/main/pg_wal_bkp/%f'
