--- a/ansible/roles/postgres/templates/postgresql.conf
+++ b/ansible/roles/postgres/templates/postgresql.conf
@@ -22,8 +22,13 @@ max_wal_senders = {{ postgres_max_wal_senders | default('0') }}
 fsync = on
 max_wal_size = 1GB
 min_wal_size = 32MB
+wal_keep_segments = 63  # A bit over 1 gb worth of segments
 archive_mode = {{ postgres_archive_mode | default('off') }}
 archive_timeout = 60  # Every 60 seconds might be too aggressive
+hot_standby = {{ postgres_hot_standby | default('off') }}
+
+# Ignored unless hot_standby is on
+primary_conninfo = 'host={{ vault_postgres_url }} port={{ vault_postgres_port }} user={{ vault_postgres_user }} password={{ vault_postgres_password }}'
 
 archive_command = 'test ! -f /var/lib/postgresql/12/main/pg_wal_bkp/%f && cp %p /var/lib/postgresql/12/main/pg_wal_bkp/%f'
 
