--- a/ansible/roles/postgres/templates/postgresql.conf
+++ b/ansible/roles/postgres/templates/postgresql.conf
@@ -30,6 +30,10 @@ hot_standby = {{ postgres_hot_standby | default('off') }}
 # Ignored unless hot_standby is on
 primary_conninfo = 'host={{ vault_postgres_url }} port={{ vault_postgres_port }} user={{ vault_postgres_user }} password={{ vault_postgres_password }}'
 
+primary_slot_name = '{{ postgresql_primary_slot_name }}'
+
+log_min_messages = 'INFO'
+
 archive_command = 'test ! -f /var/lib/postgresql/12/main/pg_wal_bkp/%f && cp %p /var/lib/postgresql/12/main/pg_wal_bkp/%f'
 
 log_line_prefix = '%m [%p] %q%u@%d '
