Allow colosseum worker role to have zero running workers
this is useful to stop a worker for example

--- a/ansible/roles/colosseum_worker/tasks/main.yml
+++ b/ansible/roles/colosseum_worker/tasks/main.yml
@@ -41,12 +41,14 @@
   # should probably be a host var
   - name: Start worker
     shell: |
-      while [[ true ]]; do {{ install_folder }}/pyenv/shims/python3 -m poetry run python3 tournament_online.py; done &
+      for i in `seq {{ colosseum_worker_count | default(1) }}`;
+      do
+        while [[ true ]]; do {{ install_folder }}/pyenv/shims/python3 -m poetry run python3 tournament_online.py; done &
+      done
     args:
       executable: /bin/bash
       chdir: "{{ install_folder }}/colosseum"
-    with_sequence: start=1 end={{ colosseum_worker_count | default(1) }}
-
+    when: colosseum_worker_count | default(1) > 0
 
   become: true
   become_method: su
