Move docker to a separate tag

--- a/ansible/colosseum_workers.yml
+++ b/ansible/colosseum_workers.yml
@@ -2,7 +2,7 @@
 - hosts: colosseum_workers
   roles:
     - role: docker
-      tags: ['colosseum_worker']
+      tags: ['docker']
 
     - role: colosseum_worker
       tags: ['colosseum_worker']
