--- a/ansible/redis.yml
+++ b/ansible/redis.yml
@@ -25,9 +25,11 @@
         - { line_to_match: "maxmemory-samples", line_to_configure: "maxmemory-samples 10" }
         - { line_to_match: "requirepass", line_to_configure: "" }
         - { line_to_match: "protected-mode", line_to_configure: "protected-mode no" }
+      register: redis_conf
 
     - name: Ensure redis service is restarted
       service: name=redis state=restarted
+      when: redis_conf.changed
 
     - name: Ensure Redis ACL are set
       shell: |
