--- a/ansible/roles/promtail/tasks/main.yml
+++ b/ansible/roles/promtail/tasks/main.yml
@@ -24,3 +24,30 @@
       owner: devops
       group: devops
       mode: '0700'
+
+  - name: Setup promtail config
+    template:
+      src: promtail-config.yaml
+      dest: /opt/promtail/promtail-config.yaml
+      owner: devops
+      group: devops
+      mode: '0644'
+
+  - name: Stop promtail
+    command: |
+      pkill --full promtail
+    ignore_errors: true
+
+  - name: Ensure promtail is running
+    shell: |
+      /opt/promtail/promtail-linux-amd64 \
+      -config.file=/opt/promtail/promtail-config.yaml \
+       >> /opt/promtail/promtail_stdout.log \
+      2>> /opt/promtail/promtail_stderr.log \
+      &
+    args:
+      executable: /bin/bash
+      chdir: /opt/promtail/
+    become: yes
+    become_method: su
+    become_user: devops
