--- a/ansible/roles/promtail/templates/promtail-config.yaml
+++ b/ansible/roles/promtail/templates/promtail-config.yaml
@@ -7,7 +7,16 @@ positions:
   filename: /tmp/positions.yaml
 
 clients:
-  - url: {{ vault_loki_host }}/loki/api/v1/push
-  basic_auth:
-    username: {{ vault_loki_user }}
-    password: {{ vault_loki_password }}
+  - url: "http://{{ vault_loki_host }}/loki/api/v1/push"
+    basic_auth:
+      username: {{ vault_loki_user }}
+      password: {{ vault_loki_password }}
+
+scrape_configs:
+- job_name: gunicorn_access_logs
+  static_configs:
+  - targets:
+      - localhost
+    labels:
+      source: gunicorn
+      __path__: "{{ install_folder }}/colosseum_website/access.log"
