--- a/.github/workflows/redeployer.yml
+++ b/.github/workflows/redeployer.yml
@@ -12,7 +12,9 @@ jobs:
   deploy:
     strategy:
       matrix:
-        environment: [staging, production]
+        environment:
+          - staging
+          - production
     runs-on: ubuntu-latest
 
     steps:
@@ -36,12 +38,13 @@ jobs:
       - name: Redeploy
         run: |
           cd ansible
-          ansible-playbook -i environments/${{ environment }} \
-            bootstrap.yml                                     \
-            redis.yml                                         \
-            postgres.yml                                      \
-            colosseum_workers.yml                             \
-            celery_workers.yml                                \
+          ansible-playbook                          \
+          -i environments/${{ matrix.environment }} \
+            bootstrap.yml                           \
+            redis.yml                               \
+            postgres.yml                            \
+            colosseum_workers.yml                   \
+            celery_workers.yml                      \
             web_servers.yml
         env:
           VAULT_PASSWORD: "${{ secrets.VAULT_PASSWORD }}"
