Set environment on promtail guinicorn access logs

--- a/ansible/roles/promtail/templates/promtail-config.yaml
+++ b/ansible/roles/promtail/templates/promtail-config.yaml
@@ -19,4 +19,5 @@ scrape_configs:
       - localhost
     labels:
       source: gunicorn
+      environment: {{ environment }}
       __path__: "{{ install_folder }}/colosseum_website/access.log"
