--- a/.github/workflows/terraform_plan_check.yml
+++ b/.github/workflows/terraform_plan_check.yml
@@ -10,6 +10,10 @@ jobs:
   smoke_test:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: terraform
+
     steps:
       - uses: actions/checkout@v2
         with:
