--- a/ansible/roles/web_server/tasks/main.yml
+++ b/ansible/roles/web_server/tasks/main.yml
@@ -38,7 +38,7 @@
 
   - name: Run django migrations
     shell: |
-      DJANGO_SETTINGS_MODULE=colosseum_website.settings.production \
+      DJANGO_SETTINGS_MODULE=colosseum_website.settings.{{ environment }} \
       {{ install_folder }}/pyenv/shims/python3 -m poetry run python3 manage.py migrate
     args:
       executable: /bin/bash
@@ -46,7 +46,7 @@
 
   - name: Run django collectstatic
     shell: |
-      DJANGO_SETTINGS_MODULE=colosseum_website.settings.production \
+      DJANGO_SETTINGS_MODULE=colosseum_website.settings.{{ environment }} \
       {{ install_folder }}/pyenv/shims/python3 -m poetry run python3 manage.py collectstatic --no-input
     args:
       executable: /bin/bash
