Turns out ``environment'' is a reserved var and I got trolled

--- a/ansible/environments/production/group_vars/all/main.yml
+++ b/ansible/environments/production/group_vars/all/main.yml
@@ -2,4 +2,4 @@
 base_domain: colosseum.website
 base_url: https://{{ base_domain }}/
 deploy_branch: production
-environment: production
+environment_name: production
