--- a/ansible/environments/staging/group_vars/all/main.yml
+++ b/ansible/environments/staging/group_vars/all/main.yml
@@ -2,4 +2,4 @@
 base_domain: staging.colosseum.website
 base_url: https://{{ base_domain }}/
 deploy_branch: develop
-environment: staging
+environment_name: staging
