--- a/.github/workflows/redeployer.yml
+++ b/.github/workflows/redeployer.yml
@@ -14,6 +14,7 @@ jobs:
         environment:
           - staging
           - production
+
     runs-on: ubuntu-latest
 
     steps:
@@ -42,6 +43,7 @@ jobs:
             bootstrap.yml                           \
             redis.yml                               \
             postgres.yml                            \
+            metrics.yml                             \
             colosseum_workers.yml                   \
             celery_workers.yml                      \
             web_servers.yml
