--- a/ansible/roles/colosseum_worker/tasks/main.yml
+++ b/ansible/roles/colosseum_worker/tasks/main.yml
@@ -29,6 +29,13 @@
       pkill -f tournament_online
     ignore_errors: true
 
+  - name: Stop old docker instances running
+    shell: |
+      docker stop $(docker ps -a -q)
+    args:
+      executable: /bin/bash
+    when: use_docker | default(false)
+
   - name: Clean log and old files
     shell: |
       find . -name '*.log' -delete
