Ignore errors when stoping docker instances

--- a/ansible/roles/colosseum_worker/tasks/main.yml
+++ b/ansible/roles/colosseum_worker/tasks/main.yml
@@ -34,6 +34,7 @@
       docker stop $(docker ps -a -q)
     args:
       executable: /bin/bash
+    ignore_errors: true
     when: use_docker | default(false)
 
   - name: Clean log and old files
