--- a/.github/workflows/log_cleaner.yml
+++ b/.github/workflows/log_cleaner.yml
@@ -8,6 +8,7 @@ jobs:
   log_cleaner:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         colosseum_enviroment: ["production", "staging"]
 
