Move variable to common location

--- a/ansible/environments/codecon/group_vars/all/main.yml
+++ b/ansible/environments/codecon/group_vars/all/main.yml
@@ -3,3 +3,5 @@ base_domain: codecon.colosseum.website
 base_url: https://{{ base_domain }}/
 deploy_branch: production
 environment_name: codecon
+
+enable_automated_seasons: false
