Run log cleaner and redeployer for codecon

--- a/.github/workflows/log_cleaner.yml
+++ b/.github/workflows/log_cleaner.yml
@@ -10,7 +10,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        colosseum_enviroment: ["production", "staging"]
+        colosseum_enviroment:
+          - staging
+          - production
+          - codecon
 
     steps:
       - uses: actions/checkout@v2
