Improve docker killing

--- a/ansible/roles/colosseum_worker/tasks/main.yml
+++ b/ansible/roles/colosseum_worker/tasks/main.yml
@@ -36,7 +36,8 @@
 
   - name: Stop old docker instances running
     shell: |
-      docker stop $(docker ps -a -q)
+      docker kill $(docker ps -q)
+      docker rm $(docker ps -a -q);
     args:
       executable: /bin/bash
     ignore_errors: true
