--- a/.github/workflows/codecon_baby_sitter.yml
+++ b/.github/workflows/codecon_baby_sitter.yml
@@ -1,4 +1,4 @@
-name: Redeployer
+name: Codecon baby sitter
 
 on:
   schedule:
@@ -8,7 +8,7 @@ on:
       - production
 
 jobs:
-  deploy:
+  colosseum_worker_babysitter:
     strategy:
       fail-fast: false
       matrix:
