--- a/ansible/roles/colosseum_worker/tasks/main.yml
+++ b/ansible/roles/colosseum_worker/tasks/main.yml
@@ -55,12 +55,20 @@
     shell: |
       for i in `seq {{ colosseum_worker_count | default(1) }}`;
       do
-        while [[ true ]]; do {{ install_folder }}/pyenv/shims/python3 -m poetry run python3 tournament_online.py; done &
+        {{ install_folder }}/pyenv/shims/python3 -m poetry run python3 tournament_online.py --loop &
       done
     args:
       executable: /bin/bash
       chdir: "{{ install_folder }}/colosseum"
     when: colosseum_worker_count | default(1) > 0
+
+  # This is here as a safety measure. If an agent breaks free of the sandbox,
+  # they won't have access to the access tokens. Doing this also makes it
+  # basically impossible to restart a worker without running this playbook
+  - name: Remove dot env file
+    file:
+      path: "{{ install_folder }}/colosseum/.env"
+      state: absent
 
   become: true
   become_method: su
