add timeout to ansible jobs

--- a/.github/workflows/log_cleaner.yml
+++ b/.github/workflows/log_cleaner.yml
@@ -15,6 +15,8 @@ jobs:
           - production
           - codecon
 
+    timeout-minutes: 5
+
     steps:
       - uses: actions/checkout@v2
         with:
