--- a/.github/workflows/terraform_plan_check.yml
+++ b/.github/workflows/terraform_plan_check.yml
@@ -4,11 +4,17 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    paths:
+      - 'terraform/**'
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   TF_VAR_hcloud_token: ${{ secrets.TF_VAR_HCLOUD_TOKEN }}
+  TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  TF_VAR_aws_region: "us-east-1"
 
 jobs:
   smoke_test:
@@ -19,13 +25,12 @@ jobs:
         working-directory: terraform
 
     steps:
-      - uses: actions/checkout@85e6279cec87321a52edac9c87bce653a07cf6c2
+      - uses: actions/checkout@v4
         with:
-          repository: "h3nnn4n/colosseum_infra"
-          ref: main
+          ref: ${{ github.event.pull_request.head.ref || github.ref }}
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd
+        uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.5
 
