--- a/ansible/redis.yml
+++ b/ansible/redis.yml
@@ -1,38 +1,6 @@
 ---
-- name: Setup redis
+- name: Setup Redis
   hosts: redis
-
-  tasks:
-    - name: Add redis ppa
-      apt_repository:
-        repo: 'ppa:chris-lea/redis-server'
-
-    - name: Ensure Redis is present
-      apt: pkg=redis-server state=latest
-
-    - name: Ensure Redis is started
-      service: name=redis-server state=started enabled=yes
-
-    - name: Ensure Redis parameters are configured
-      lineinfile:
-        dest: /etc/redis/redis.conf
-        regexp: "{{ item.line_to_match }}"
-        line: "{{ item.line_to_configure }}"
-      with_items:
-        - { line_to_match: "maxmemory", line_to_configure: "maxmemory 512MB" }
-        - { line_to_match: "bind", line_to_configure: "bind 0.0.0.0" }
-        - { line_to_match: "maxmemory-policy", line_to_configure: "maxmemory-policy allkeys-lru" }
-        - { line_to_match: "maxmemory-samples", line_to_configure: "maxmemory-samples 10" }
-        - { line_to_match: "requirepass", line_to_configure: "" }
-        - { line_to_match: "protected-mode", line_to_configure: "protected-mode no" }
-      register: redis_conf
-
-    - name: Ensure redis service is restarted
-      service: name=redis state=restarted
-      when: redis_conf.changed
-
-    - name: Ensure Redis ACL are set
-      shell: |
-        echo "ACL SETUSER {{ vault_redis_user }} allkeys allcommands on >{{ vault_redis_password }}" | redis-cli
-        echo "ACL SETUSER default off" | redis-cli
-        echo "CONFIG REWRITE" | redis-cli
+  roles:
+    - role: redis
+      tags: ['redis']
