--- a/ansible/roles/postgres/tasks/main.yml
+++ b/ansible/roles/postgres/tasks/main.yml
@@ -118,3 +118,39 @@
   become: yes
   become_user: postgres
   when: is_replica_db | default(false) | bool == false
+
+- name: Grant schema privileges to the database user
+  postgresql_privs:
+    database: "{{ vault_postgres_database }}"
+    roles: "{{ vault_postgres_user }}"
+    type: schema
+    objs: public
+    privs: ALL
+    grant_option: yes
+  become: yes
+  become_user: postgres
+  when: is_replica_db | default(false) | bool == false
+
+- name: Make user the owner of the public schema
+  postgresql_query:
+    db: "{{ vault_postgres_database }}"
+    query: ALTER SCHEMA public OWNER TO {{ vault_postgres_user }};
+  become: yes
+  become_user: postgres
+  when: is_replica_db | default(false) | bool == false
+
+- name: Set default privileges in the public schema
+  postgresql_query:
+    db: "{{ vault_postgres_database }}"
+    query: |
+      ALTER DEFAULT PRIVILEGES FOR ROLE {{ vault_postgres_user }} IN SCHEMA public
+      GRANT ALL ON TABLES TO {{ vault_postgres_user }};
+
+      ALTER DEFAULT PRIVILEGES FOR ROLE {{ vault_postgres_user }} IN SCHEMA public
+      GRANT ALL ON SEQUENCES TO {{ vault_postgres_user }};
+
+      ALTER DEFAULT PRIVILEGES FOR ROLE {{ vault_postgres_user }} IN SCHEMA public
+      GRANT ALL ON TYPES TO {{ vault_postgres_user }};
+  become: yes
+  become_user: postgres
+  when: is_replica_db | default(false) | bool == false
