Install iredis on all machines, for convenience

--- a/ansible/roles/bootstrap/tasks/main.yml
+++ b/ansible/roles/bootstrap/tasks/main.yml
@@ -12,6 +12,7 @@
       - libmagic1  # For mime detection
       - libpq-dev
       - neovim
+      - iredis
       - prometheus-node-exporter
       - sudo
       - nmap
