--- a/ansible/roles/redis/tasks/main.yml
+++ b/ansible/roles/redis/tasks/main.yml
@@ -24,7 +24,7 @@
     - { line_to_match: "maxmemory-samples", line_to_configure: "maxmemory-samples 10" }
     - { line_to_match: "^# requirepass", line_to_configure: "requirepass {{ vault_redis_password | default('') }}" }
     - { line_to_match: "^requirepass", line_to_configure: "requirepass {{ vault_redis_password | default('') }}" }
-    - { line_to_match: "protected-mode", line_to_configure: "protected-mode no" }
+    - { line_to_match: "protected-mode", line_to_configure: "protected-mode yes" }
     - { line_to_match: "^aclfile", line_to_configure: "# aclfile /etc/redis/users.acl" }
   register: redis_conf
   when: vault_redis_password is defined
