Install redis-cli on all servers

--- a/ansible/roles/bootstrap/tasks/main.yml
+++ b/ansible/roles/bootstrap/tasks/main.yml
@@ -17,6 +17,7 @@
       - sudo
       - nmap
       - unzip
+      - redis-tools
     state: present
     update_cache: yes
     cache_valid_time: 3600
